--- a/style.css
+++ b/style.css
@@ -15,4 +15,15 @@ body {
 
 .header .links ul li a {
     text-decoration: none;
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.hero {
+    background-color: #1f2937;
+}
+
+.header .logo {
+    font-size: 24px;
+    color: #f9faf8;
 }
