--- a/style.css
+++ b/style.css
@@ -27,3 +27,12 @@ body {
     font-size: 24px;
     color: #f9faf8;
 }
+
+.square {
+    border: 3px solid blue;
+
+}
+
+.item {
+    border: 3px solid red;
+}
