Add color and size to call to action and others

--- a/style.css
+++ b/style.css
@@ -15,10 +15,12 @@ body {
 
 .header .links ul li a {
     text-decoration: none;
+}
+
+.header .links ul li a, .hero .first p {
     font-size: 18px;
     color: #e5e7eb;
 }
-
 .hero, .footer {
     background-color: #1f2937;
 }
@@ -41,4 +43,8 @@ body {
     font-size: 48px;
     color: #f9faf8;
     font-weight: 900;
+}
+
+button, .rectangle {
+    background-color: #3882f6;
 }
