--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .square {
-    border: 3px solid blue;
+    border: 3px solid #3882f6;
 
 }
 
@@ -47,4 +47,10 @@ body {
 
 button, .rectangle {
     background-color: #3882f6;
+}
+
+.info h2 {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
 }
