--- a/style.css
+++ b/style.css
@@ -32,7 +32,9 @@ body {
 
 .square {
     border: 3px solid #3882f6;
-
+    border-radius: 4px;
+    width: 100px;
+    height: 100px;
 }
 
 .item {
@@ -72,6 +74,8 @@ button, .hero .first .image {
 
 .hero .first .image {
     background-color: gray;
+    width: 300px;
+    height: 135px;
 }
 
 .call, .footer {
