--- a/style.css
+++ b/style.css
@@ -32,13 +32,15 @@ body {
 
 .square {
     border: 3px solid #3882f6;
-    border-radius: 4px;
+    border-radius: 8px;
     width: 100px;
     height: 100px;
 }
 
 .item {
     border: 3px solid red;
+    width: 120px;
+    height: auto;
 }
 
 .hero .first h1 {
