--- a/style.css
+++ b/style.css
@@ -114,3 +114,9 @@ button {
     height: auto;
     width: 75%;
 }
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
