--- a/style.css
+++ b/style.css
@@ -115,8 +115,9 @@ button {
     width: 75%;
 }
 
-.hero {
+.hero, .info {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
