--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@ button, .hero .first .image {
     background-color: gray;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .call, .footer {
