--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ button, .rectangle {
     font-size: 36px;
     color: #1f2937;
     font-weight: 900;
+    margin: 30px 0;
 }
 
 .quote {
@@ -130,6 +131,7 @@ button {
 .items {
     display: flex;
     gap: 20px;
+    margin-bottom: 60px;
 }
 
 .header {
