--- a/style.css
+++ b/style.css
@@ -163,19 +163,18 @@ button {
     text-align: center;
 }
 
-.quote-text {
+.quote-container {
     width: 70%;
-    margin-top: 100px;
+    margin: 100px 0 80px 0;
 }
 
 .quote {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
 .author {
-    align-self: flex-end;
-    margin-bottom: 80px;
+    justify-self: flex-end;
+    margin-right: 50px;
 }
