--- a/style.css
+++ b/style.css
@@ -189,4 +189,9 @@ button {
 .rectangle {
     display: flex;
     padding: 30px 50px;
+    justify-content: space-between;
+}
+
+.right-button {
+    align-self: flex-end;
 }
