--- a/style.css
+++ b/style.css
@@ -195,3 +195,9 @@ button {
 .right-button {
     align-self: flex-end;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
